<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brain Rot</string>
    <string name="choose_file">Brain Rot Import</string>
    
    <string name="action_search">Search</string>
    <string name="action_cardhistory">Card History</string>
    <string name="action_previouscard">Previous Card</string>
    <string name="action_nextdue">Next Due</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_learnnew">Learn New Cards</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_emptydb">Empty DB</string>
    
    <string name="action_setranking">Set Ranking</string>
    <string name="action_editcard">Edit Card</string>
    <string name="action_deletecard">Delete Card</string>
    <string name="action_showstats">Show Stats</string>
    
    <string name="str_welcome"><i>welcome to\nBRAIN ROT</i></string>
    <string name="str_beginlearning">Begin Learning</string>
    <string name="str_btn_wrong">Wrong</string>
    <string name="str_btn_right">Right</string>
    <string name="str_btn_flipcard">Flip Card</string>
    <string name="str_btn_flipback">Flip Back</string>
    <string-array name="arr_str_graphoptions">
        <item >Rotten Pie</item>
        <item >Dots of rot</item>
    </string-array>
    
</resources>
