<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vs_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/str_welcome"
            android:src="@drawable/welcome" />

        <Button
            android:id="@+id/btn_beginlearning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="btn_beginlearning_clicked"
            android:text="@string/str_beginlearning" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/txt_overdue_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

        <ViewSwitcher
            android:id="@+id/vs_cardsides"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txt_sideone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/str_welcome"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/Large" />

            <TextView
                android:id="@+id/txt_sidetwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/str_welcome"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/Large" />
        </ViewSwitcher>

        <ViewSwitcher
            android:id="@+id/vs_buttonrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_flipcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btn_flipcard_clicked"
                android:text="@string/str_btn_flipcard" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_flipback"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btn_flipback_clicked"
                    android:text="@string/str_btn_flipback" />

                <Button
                    android:id="@+id/btn_wrong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btn_wrong_clicked"
                    android:text="@string/str_btn_wrong" />

                <Button
                    android:id="@+id/btn_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btn_right_clicked"
                    android:text="@string/str_btn_right" />
            </LinearLayout>
        </ViewSwitcher>
    </LinearLayout>

</ViewSwitcher>